# FITTRACK-AI

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  render.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.json  requirements.txt  start.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260610_0001_initial_users.py  20260610_0002_goals.py  20260610_0003_weight_entries.py  20260611_0005_workouts.py  20260612_0006_nutrition.py  20260612_0007_body_measurements.py  20260616_0008_ai_usage_log.py  20260618_0009_wellness.py  20260619_0010_fix_ai_usage_log_timestamps.py  20260623_0011_habits.py  20260626_0012_stress_mindfulness.py  20260630_0013_nutrition_targets.py  20260701_0014_recipes.py
apps/api/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py
apps/api/app/core/: __init__.py  pagination.py  security.py
apps/api/app/models/: __init__.py  ai_log.py  base.py  exercise.py  goal.py  habit.py  measurement.py  mindfulness.py  nutrition.py  nutrition_target.py  recipe.py  stress.py  user.py  weight_entry.py  wellness.py  workout.py
apps/api/app/repositories/: __init__.py  exercise_repository.py  goal_repository.py  habit_repository.py  measurement_repository.py  nutrition_repository.py  nutrition_target_repository.py  recipe_repository.py  user_repository.py  weight_repository.py  wellness_repository.py  workout_repository.py
apps/api/app/routers/: ai.py  auth.py  dashboard.py  exercises.py  goals.py  habit.py  health.py  measurements.py  mindfulness.py  nutrition.py  privacy.py  progress.py  recipes.py  stress.py  users.py  weight.py  (+2 more)
apps/api/tests/: conftest.py  test_ai.py  test_auth.py  test_config.py  test_daily_insight.py  test_dashboard_habits.py  test_exercises.py  test_goals.py  test_habits.py  test_health.py  test_macro_estimation.py  test_meal_logging.py  test_measurements.py  test_mindfulness.py  test_nutrition.py  test_nutrition_targets.py  test_privacy.py  test_progress.py  test_recipes.py  test_stress.py  test_users.py  test_weight.py  test_wellness.py  test_workouts.py
(+142 files in other folders)
