[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fittrack-api"
version = "0.1.0"
description = "FitTrack AI — FastAPI backend"
requires-python = ">=3.11"

# ── Ruff (lint + format) ────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line-too-long — handled by formatter
    "B008",   # do not perform function calls in default arguments (FastAPI Depends)
    "RUF012", # mutable class attrs — SQLAlchemy pattern
    "N818",   # AppException is an intentional base class name; subclasses use *Error suffix
    "TCH001", # Keeping application imports at top level for clarity
    "TCH002", # TYPE_CHECKING moves unhelpful in test files with TestClient annotations
    "TCH003", # Keeping stdlib imports at top level for clarity
    "UP017",  # datetime.UTC is Python 3.11+; we support 3.10+
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["alembic/"]

# ── pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

# ── coverage ────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "alembic/*"]

[tool.coverage.report]
skip_empty = true
